    * 0628 raritan_pdu_inlet: now also monitors the three phases of the inlet
    * 1073 sni_octopuse_cpu: added PNP graph definition and Perf-O-Meter
    * 0178 mssql_tablespaces: It is now possible to define thresholds
    * 0999 allnet_ip_sensoric.pressure: New Check for Pressure Sensors in ALLNET IP Sensoric devices
    * 1082 windows agent: now also available as msi installer...
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...
    * 1032 FIX: check_traceroute: Fix option Use DNS, worked vice versa
    * 0171 FIX: hp_blade_psu: Fixed pnp template...
    * 0996 FIX: apc_symmetra_test: Handle unknown date of last self test as intended...
    * 0173 FIX: hitachi_hnas_volume: Fixed bug when snmp outputs empty lines
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0948 FIX: mk_inventory.ps1: increased caching time to 14400, fixed incorrect default cachefile path
    * 0827 FIX: lnx_thermal: Not checking active trip points (e.g. cooling device triggers) anymore
    * 1043 FIX: printer_supply: fix value error in default parameters...
    * 0626 FIX: veeam_jobs: agent now supports output lines longer than 80 chars
    * 1072 FIX: printer_supply: fix colors of Perf-O-Meter on HP OfficeJet...
    * 0950 FIX: check_mkevents: now able to resolve the hostname of the remote hosts...
    * 0177 FIX: esx_vsphere_hostsystem.multipath: Fixed return state in case of paths in standby...
    * 1054 FIX: mysql_slave: Only monitor the age of the slave when it is running
    * 1075 FIX: if, if64: Fixed PNP template in order to correctly scale Y axis
    * 0631 FIX: fc_port: several fixes for the perfometer to display the right values...