@@ -29,7 +29,8 @@ def check_dns_arguments(params):
     args = '-H %s' % quote_shell_string(description)
 
     if "server" in settings:
-        args += ' -s %s' % quote_shell_string(settings["server"])
+        if settings["server"] != "use local configuration":
+            args += ' -s %s' % quote_shell_string(settings["server"])
     else:
         args += " -s '$HOSTADDRESS$'"
 
