@@ -26,6 +26,7 @@
     * 0178 mssql_tablespaces: It is now possible to define thresholds
     * 0999 allnet_ip_sensoric.pressure: New Check for Pressure Sensors in ALLNET IP Sensoric devices
     * 1082 windows agent: now also available as msi installer...
+    * 0179 check_dns: It is now possible to use the local dns server in wato configuration...
     * 0994 FIX: agent plugin smart: fixed syntax error
     * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
     * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
